Correction of spelling errors.

* interupted -> interrupted
* dont -> don't

(thanks to lintian)

See https://bugzilla.samba.org/show_bug.cgi?id=6935

(This used to be ctdb commit 942f597dd343f21e2f0fc5d8116d929286db7413)